--- a/base.yml
+++ b/base.yml
@@ -1,7 +1,7 @@
 ---
 # This playbook used to query Tower db for job failures. 
 
-- hosts: tower
+- hosts: pg_server
   remote_user: root
   become: true
   roles:
